* Fixed scrollbar horizontal icon name. Reference code: https://github.com/GNOME/gtk/commit/63c18bba51806884684d15ea8305255f9f45d10a (#599)

--- a/src/gtk-3.20/scss/widgets/_scrollbar.scss
+++ b/src/gtk-3.20/scss/widgets/_scrollbar.scss
@@ -120,12 +120,12 @@
         &.horizontal {
             button {
                 &.down {
-                    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
+                    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
                     border-left: 1px solid $borders_color;
                 }
 
                 &.up {
-                    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");
+                    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
                     border-right: 1px solid $borders_color;
                 }
             }
